Border bug on mobile

--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -48,8 +48,6 @@
 @media (max-width: 600px) {
   .section {
     padding: 1.5rem 1.5rem;
-    border-bottom: 1px solid #222;
-    border-top: 1px solid #222;
   }
 }
 
